# CommitCraft

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  commitcraft_cli.py  pyproject.toml  requirements.txt
commitcraft/: __init__.py  ai_client.py  app.py  changelog.py  config.py  conventional.py  dependencies.py  git_service.py  i18n.py  logging_config.py  repository_state.py  subprocess_utils.py  terminal.py
docs/: commit-message-structure.md
